Ready for delivery

--- a/2_Plagiarism_Feature_Engineering.ipynb
+++ b/2_Plagiarism_Feature_Engineering.ipynb
@@ -2214,7 +2214,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n"
+    "**Answer:**\n",
+    "\n",
+    "I decided to include the `lcs_word` as it is different (in the way it is calculated) from the other features.\n",
+    "\n",
+    "Then, from the other eleven features, my idea was to select a few that would represent the data but have as little correlation as possible with each other. So I chose three features quite far away: `c_1`, `c_5` and `c_11`."
    ]
   },
   {
