--- a/3_Training_a_Model.ipynb
+++ b/3_Training_a_Model.ipynb
@@ -661,7 +661,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's ploy the confusion matrix to see better what is going on."
+    "Let's plot the confusion matrix to see better what is going on."
    ]
   },
   {
