Final update on notebook 2

--- a/2_Plagiarism_Feature_Engineering.ipynb
+++ b/2_Plagiarism_Feature_Engineering.ipynb
@@ -620,7 +620,7 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "This implementation of the containment calculation just uses a couple of texts each time to compare similarity. So no further information is used appart from those two texts, and no information is passed from test to train."
+    "This implementation of the containment calculation just uses a couple of texts (namely, the answer_Text and the original text) each time to compare similarity. So no further information is used appart from those two texts, and no information is passed from test to train."
    ]
   },
   {
